<resources>
    <string name="app_name">Color Quiz</string>

    <string name="Question1">1. Which one is not food? (20 Points)</string>
    <string name="Question2">2. Which one is not machine? (20 Points)</string>
    <string name="Question3">3. Which one is not Animal? (20 Points)</string>
    <string name="Question4">4. Which one is not sports? (20 Points)</string>
    <string name="Question5">5. Which one is not Drinks? (20 Points)</string>

    <string name="LastQ">Did you solve these question alone?</string>

</resources>
