<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                    <TextView
                        android:textSize="16sp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/Question1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@color/Blue"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="30dp" />
                    <ImageView
                        android:src="@color/Brown"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="30dp" />
                </LinearLayout>

                <RadioGroup
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/one_blue_radio"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </RadioGroup>

                <!-- ********************************************************** -->

                <TextView
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/Question2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@color/Pink"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="30dp" />
                    <ImageView
                        android:src="@color/Green"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="30dp" />
                </LinearLayout>

                <RadioGroup
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:id="@+id/two_green_radio"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </RadioGroup>

                <!-- ********************************************************** -->

                <TextView
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/Question3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@color/Yellow"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="30dp" />
                    <ImageView
                        android:src="@color/Black"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="30dp" />
                </LinearLayout>

                <RadioGroup
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/thr_yellow_radio"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </RadioGroup>

                <!-- ********************************************************** -->

                <TextView
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/Question4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@color/White"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="30dp" />
                    <ImageView
                        android:src="@color/Purple"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="30dp" />
                </LinearLayout>

                <RadioGroup
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/fou_white_radio"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </RadioGroup>
                <!-- ********************************************************** -->

                <TextView
                    android:textSize="16sp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/Question5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@color/Red"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="30dp" />
                    <ImageView
                        android:src="@color/Orange"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="30dp" />
                </LinearLayout>

                <RadioGroup
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:id="@+id/fiv_orange_radio"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                </RadioGroup>
                <Button
                    android:layout_marginTop="16dp"
                    android:onClick="ScoreClick"
                    android:text="Score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:id="@+id/scorelayout"
                    android:visibility="invisible"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/one"
                        android:gravity="center"
                        android:textSize="36sp"
                        android:textColor="@color/Red"
                        android:text="X"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/two"
                        android:gravity="center"
                        android:textSize="36sp"
                        android:textColor="@color/Red"
                        android:text="X"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/three"
                        android:gravity="center"
                        android:textSize="36sp"
                        android:textColor="@color/Red"
                        android:text="X"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/four"
                        android:gravity="center"
                        android:textSize="36sp"
                        android:textColor="@color/Red"
                        android:text="X"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/five"
                        android:gravity="center"
                        android:textSize="36sp"
                        android:textColor="@color/Red"
                        android:text="X"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>
</ScrollView>